Update contact location in index.html

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Location</h4>
-                            <p>sambhal</p>
+                            <p>Hasanpur road bhartal Sirsi Sambhal>
                         </div>
                     </div>
                 </div>
