Remove duplicate google-site-verification meta tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Galiv.tech - Machine Learning Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta name="google-site-verification" content="QwUQBHQgRfLpFe-MuHW3ox4ccdK1RItkK84j-9zOYB4" />
 </head>
 <body>
     <!-- Navigation -->
